--- a/index.html
+++ b/index.html
@@ -147,5 +147,31 @@
                 </ul>
             </div>
         </div>
+        <!-- banner -->
+        <!-- banner -->
+        <div class="banner">
+            <div class="imgwrap">
+                <div class="center ctr"></div>
+                <img class="first" src="img/1.jpg">
+                <img src="img/2.jpg">
+                <img src="img/3.jpg">
+                <img src="img/4.jpg">
+                <img src="img/5.jpg">     
+            </div>
+            <div class="arrow arrowleft">&lt;
+            </div>
+            <div class="arrow arrowright">&gt;</div>
+            <div class="circles">
+            <span class="ciritem active"></span>
+            <span class="ciritem"></span>
+            <span class="ciritem"></span>
+            <span class="ciritem"></span>
+            <span class="ciritem"></span>
+            <span class="ciritem"></span>
+            </div>
+        </div>
+        <script src="js/jquery-1.11.3.js"></script>
+        <script src="js/index.js"></script>
+        <script src="js/banner.js"></script>
     </body>
 </html>
