首页底部和左侧

--- a/bottom.html
+++ b/bottom.html
@@ -1,3 +1,92 @@
+
+
+        <!-- <link rel="stylesheet" href="css/bottom.css">
+        <link rel="stylesheet" href="css/index.css"> -->
+    	<div id="footer">
+    		<div class="center footer1">
+    			<img src="img/end.jpg" alt="">
+    		</div>
+    		<div class="center footer2">
+    			<ul>
+    				<li>
+    					<p class="fter2-tit">新手上路</p>
+    					<a href="#">新用户注册</a>
+    					<a href="#">忘记密码</a>
+    					<a href="#">购物流程</a>
+    				</li>
+    				<li>
+    					<p class="fter2-tit">新手上路</p>
+    					<a href="#">新用户注册</a>
+    					<a href="#">忘记密码</a>
+    					<a href="#">购物流程</a>
+    				</li>
+    				<li>
+    					<p class="fter2-tit">新手上路</p>
+    					<a href="#">新用户注册</a>
+    					<a href="#">忘记密码</a>
+    					<a href="#">购物流程</a>
+    				</li>
+    				<li>
+    					<p class="fter2-tit">新手上路</p>
+    					<a href="#">新用户注册</a>
+    					<a href="#">忘记密码</a>
+    					<a href="#">购物流程</a>
+    				</li>
+    				<li class="fter2end">
+    					<a href="#">
+    						<img src="img/sao.jpg">
+    						<p>手机优品惠<br><span>(优购物)</span></p>
+    					</a>
+    				</li>
+    				<li class="fter2end fter2img">
+    					<img src="img/foot_dh.jpg">
+    				</li>
+    			</ul>
+    		</div>
+    		<div class="center footer3">
+    			<ul class="endul">
+    				<li><a href="#">首页</a></li>
+    				<li><a href="#">关于优品惠</a></li>
+    				<li><a href="#">优购物</a></li>
+    				<li><a href="#">联系我们</a></li>
+    				<li><a href="#">招贤纳士</a></li>
+    				<li><a href="#">招商专区</a></li>
+    				<li><a href="#">供应商入口</a></li>
+    				<li><a href="#">友情链接</a></li>
+    				<li><a href="#">网站地图</a></li>
+    				<li><a href="#">咨询中心</a></li>
+    				<li><a href="#">首页</a></li>
+    				<li><a href="#" style="border:0">首页</a></li>
+    			</ul>
+    			<p class="endp1">
+    				友情链接：<a href="#">华为商城</a>
+    				<a href="#">佐卡伊珠宝网</a>
+    				<a href="#">华强北</a>
+    				<a href="#">淘鞋网</a>
+    				<a href="#">团购王</a>
+    				<a href="#">中国零食网</a>
+    				<a href="#">腕表名表</a>
+    				<a href="#">太平洋家居产品库</a>
+    				<a href="#">网上购物</a>
+    				<a href="#">团购网</a>
+    				<a href="#">钻石</a>
+    				<a href="#">城市联盟</a>
+    				<a href="#">手表</a>
+    				<a href="#">九块邮</a>
+    				<a href="#">婚礼珠宝</a>
+    			</p>
+    			<p class="endp1">
+    				优品惠（优购物）全球优品特卖网站 专属于千万女性的优品特卖网站,优品惠（优购物）电视购物官方网站,100%正品保证 支持货到付款.
+    			</p>
+    			<p class="endp1">
+    				Copyright©2007-2015   北京优购文化发展有限公司版权所有   京ICP备14018505号   食品流通许可证编号SP1103021310006741(1-1)
+    			</p>
+    			<p class="endp1">
+    				 公司地址:北京市经济技术开发区同济南路19号   服务热线：400-707-0707
+    			</p>
+    		</div>
+    	</div>
+<!-- 
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -37,8 +126,60 @@
     					<a href="#">忘记密码</a>
     					<a href="#">购物流程</a>
     				</li>
+    				<li class="fter2end">
+    					<a href="#">
+    						<img src="img/sao.jpg">
+    						<p>手机优品惠<br><span>(优购物)</span></p>
+    					</a>
+    				</li>
+    				<li class="fter2end fter2img">
+    					<img src="img/foot_dh.jpg">
+    				</li>
     			</ul>
+    		</div>
+    		<div class="center footer3">
+    			<ul class="endul">
+    				<li><a href="#">首页</a></li>
+    				<li><a href="#">关于优品惠</a></li>
+    				<li><a href="#">优购物</a></li>
+    				<li><a href="#">联系我们</a></li>
+    				<li><a href="#">招贤纳士</a></li>
+    				<li><a href="#">招商专区</a></li>
+    				<li><a href="#">供应商入口</a></li>
+    				<li><a href="#">友情链接</a></li>
+    				<li><a href="#">网站地图</a></li>
+    				<li><a href="#">咨询中心</a></li>
+    				<li><a href="#">首页</a></li>
+    				<li><a href="#" style="border:0">首页</a></li>
+    			</ul>
+    			<p class="endp1">
+    				友情链接：<a href="#">华为商城</a>
+    				<a href="#">佐卡伊珠宝网</a>
+    				<a href="#">华强北</a>
+    				<a href="#">淘鞋网</a>
+    				<a href="#">团购王</a>
+    				<a href="#">中国零食网</a>
+    				<a href="#">腕表名表</a>
+    				<a href="#">太平洋家居产品库</a>
+    				<a href="#">网上购物</a>
+    				<a href="#">团购网</a>
+    				<a href="#">钻石</a>
+    				<a href="#">城市联盟</a>
+    				<a href="#">手表</a>
+    				<a href="#">九块邮</a>
+    				<a href="#">婚礼珠宝</a>
+    			</p>
+    			<p class="endp1">
+    				优品惠（优购物）全球优品特卖网站 专属于千万女性的优品特卖网站,优品惠（优购物）电视购物官方网站,100%正品保证 支持货到付款.
+    			</p>
+    			<p class="endp1">
+    				Copyright©2007-2015   北京优购文化发展有限公司版权所有   京ICP备14018505号   食品流通许可证编号SP1103021310006741(1-1)
+    			</p>
+    			<p class="endp1">
+    				 公司地址:北京市经济技术开发区同济南路19号   服务热线：400-707-0707
+    			</p>
     		</div>
     	</div>
     </body>
 </html>
+ -->
