--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="css/index.css">
+        <link rel="stylesheet" href="css/bottom.css">
     </head>
     <body>
     	<!-- top -->
@@ -2878,10 +2879,16 @@
                 </ul>
             </div>
         </div>
+        <div class="end" style="height:500px;">
+            
+        </div>
         <script src="js/jquery-1.11.3.js"></script>
         <script src="js/index.js"></script>
         <script src="js/jquery.cookie.js"></script>
         <script src="js/banner.js"></script>
         <script src="js/search.js"></script>
+        <script> 
+                $('.end').load('bottom.html')
+        </script>
     </body>
 </html>
