--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="css/index.css">
         <link rel="stylesheet" href="css/bottom.css">
+        <link rel="stylesheet" href="css/left.css">
     </head>
     <body>
     	<!-- top -->
@@ -64,10 +65,12 @@
             </div> 
             <div class="mycart">
                 <div class="cart">
-                    <b><img src="img/gwc.png"  alt=""></b>
-                    我的购物车
+                    <b class="incart1"><img src="img/gwc.png"  alt=""></b>
+                    <i class="incart2"></i>
+                    <a class="incart3" href="#">我的购物车</a>
+                    <span class="incart4">0</span>
                 </div>
-                <div>
+                <div class="inlist">
                     <p>购物车还没有商品，快去挑选吧~</p>
                 </div>
             </div>
@@ -186,8 +189,314 @@
         <!-- cont -->
         <div id="index-cont">
             <div class="index-box1 center">
-                <div></div>
-                <div></div>
+                <div class="box1_left">
+                     <div class="banner-img">
+                       <ul>
+                           <li>
+                              <img src="img/ban1.jpg">
+                                <div class="ban2">
+                                    <h3>肖邦简爱焖烧杯300ml（天南地北都适用）</h3>
+                                    <p class="ban2p"></p>
+                                    <div class="ban2price">
+                                        <span class="ban2pri1">￥199</span>
+                                        <span class="pri2">
+                                            <p class="pri2p1"><b class="prib b1">包邮</b></p>
+                                        </span>
+                                    </div>
+                                    <div class="ban2jia">
+                                        <p id="ban2img"><img src="img/head_img.jpg" alt=""></p>
+                                        <div class="ban2phone">
+                                            <p class="phone1">138*****9198</p>
+                                            <p class="phone2">我老婆说我第一次买着好东西。</p>
+                                        </div>
+                                    </div>
+                                </div>
+                           </li>
+                           <li>
+                               <img src="img/ban2.jpg">
+                                <div class="ban2">
+                                    <h3>莫洛琪马油套装</h3>
+                                    <p class="ban2p">【买手说】富含优质马油精华，补充肌肤营养,滋养肌肤，改善暗沉暗哑，恢复肌肤莹润嫩滑！</p>
+                                    <div class="ban2price">
+                                        <span class="ban2pri1">￥199</span>
+                                        <span class="pri2">
+                                            <p class="pri2p1"><b class="prib b1">包邮</b></p>
+                                        </span>
+                                    </div>
+                                    <div class="ban2jia">
+                                        <p id="ban2img"><img src="img/head_img.jpg" alt=""></p>
+                                        <div class="ban2phone">
+                                            <p class="phone1">138*****9198</p>
+                                            <p class="phone2">我老婆说我第一次买着好东西。</p>
+                                        </div>
+                                    </div>
+                                </div>
+                           </li>
+                           <li>
+                              <img src="img/ban3.jpg">
+                                <div class="ban2">
+                                    <h3>韩国Pallaskr 电脑智能空气炸锅（下单赠陶瓷刀5件）</h3>
+                                    <p class="ban2p">【买手说】电脑操作快捷方便；控制旋钮一键搞定，无需等待；七大煎炸模式，牛扒、薯条、鸡翅、蛋糕、...</p>
+                                    <div class="ban2price">
+                                        <span class="ban2pri1">￥199</span>
+                                        <span class="pri2">
+                                            <p class="pri2p1"><b class="prib b1">包邮</b></p>
+                                        </span>
+                                    </div>
+                                    <div class="ban2jia">
+                                        <p id="ban2img"><img src="img/head_img.jpg" alt=""></p>
+                                        <div class="ban2phone">
+                                            <p class="phone1">138*****9198</p>
+                                            <p class="phone2">炸了鱿鱼圈，比想象的要好，本来以为会很干，没想到口感还真不错。好评</p>
+                                        </div>
+                                    </div>
+                                </div>
+                           </li>
+                           <li>
+                              <img src="img/ban4.jpg">
+                                <div class="ban2">
+                                    <h3>岐氏姐妹 文艺复古秋款连衣裙F2075-1092</h3>
+                                    <p class="ban2p">【买手说】2016新款秋连衣裙 文艺复古范儿，亲肤体验，透气凉爽，宽松舒适。</p>
+                                    <div class="ban2price">
+                                        <span class="ban2pri1">￥199</span>
+                                        <span class="pri2">
+                                            <p class="pri2p1"><b class="prib b1">包邮</b></p>
+                                        </span>
+                                    </div>
+                                    <!-- <div class="ban2jia">
+                                        <p id="ban2img"><img src="img/head_img.jpg" alt=""></p>
+                                        <div class="ban2phone">
+                                            <p class="phone1">138*****9198</p>
+                                            <p class="phone2">我老婆说我第一次买着好东西。</p>
+                                        </div>
+                                    </div> -->
+                                </div>
+                           </li>
+                           <li>
+                               <img src="img/ban5.jpg">
+                                <div class="ban2">
+                                    <h3>博金翡翠A货三色福禄寿平安如意手链</h3>
+                                    <p class="ban2p">【小编说】 精选A货翡翠 通透如水、质地细腻、饱满水润 纯手工编织更突显古典美</p>
+                                    <div class="ban2price">
+                                        <span class="ban2pri1">￥199</span>
+                                        <span class="pri2">
+                                            <p class="pri2p1"><b class="prib b1">包邮</b></p>
+                                        </span>
+                                    </div>
+                                    <!-- <div class="ban2jia">
+                                        <p id="ban2img"><img src="img/head_img.jpg" alt=""></p>
+                                        <div class="ban2phone">
+                                            <p class="phone1">138*****9198</p>
+                                            <p class="phone2">我老婆说我第一次买着好东西。</p>
+                                        </div>
+                                    </div> -->
+                                </div>
+                           </li>
+                           <li>
+                              <img src="img/ban6.jpg">
+                                <div class="ban2">
+                                    <h3>德国进口费尔德城堡小麦啤酒24罐</h3>
+                                    <p class="ban2p">【买手说】德国原装进口，口感清爽可口，持久溢香 香气：泡沫丰富，散发浓郁的麦香味。</p>
+                                    <div class="ban2price">
+                                        <span class="ban2pri1">￥199</span>
+                                        <span class="pri2">
+                                            <p class="pri2p1"><b class="prib b1">包邮</b></p>
+                                        </span>
+                                    </div>
+                                    <div class="ban2jia">
+                                        <p id="ban2img"><img src="img/head_img.jpg" alt=""></p>
+                                        <div class="ban2phone">
+                                            <p class="phone1">138*****9198</p>
+                                            <p class="phone2">有点酸度，但口味比较淡，不错，放办公室，慢慢喝</p>
+                                        </div>
+                                    </div>
+                                </div>
+                           </li>
+                       </ul>
+                        <div>
+                            <div class="arrow arrow-left ">&lt;</div>
+                            <divn class="arrow arrow-right">&gt;</divn>
+                        </div>
+                        <div class="ad-title">
+                            <a href="#" class="cur"><img src="img/ban1.jpg"></a>
+                            <a href="#"><img src="img/ban2.jpg"></a>
+                            <a href="#"><img src="img/ban3.jpg"></a>
+                            <a href="#"><img src="img/ban4.jpg"></a>
+                            <a href="#"><img src="img/ban5.jpg"></a>
+                            <a href="#"><img src="img/ban6.jpg"></a>
+                        </div>
+               
+                    </div>
+                </div>
+                <div class="ban2right">
+                    <div class="ban2right1">
+                        <img src="img/tv_ugo.jpg" alt="">
+                    </div>
+                    <div class="ban2right2">
+                        <a href="#">
+                            <dl>
+                                <dt><img src="img/ritimg.jpg" alt=""></dt>
+                                <dd>
+                                    <p class="ban2dtp1">[愷撒名奴]哥特经典百搭羊毛裙 2色2件</p>
+                                    <p><span class="ban2pri1">￥199</span></p>
+                                    <p class="ban2dtp2">距结束 00:00:00</p>
+                                    <p class="ban2dtp3">立即抢购 ></p>
+                                </dd>
+                            </dl>
+                        </a>
+                    </div>
+                    <div class="ban2right3">
+                        <p class="ftit"><span>24小时</span>直播预告</p>
+                        <div class="tvshow">
+                            <div class="ban3">
+                                <ul class="ban3wrap">
+                                    <li>
+                                        <a href="#">
+                                            <span></span>
+                                            <img src="img/ban3-1.jpg" alt="">
+                                        </a>
+                                        <a href="#">
+                                            <span></span>
+                                            <img src="img/ban3-2.jpg" alt="">
+                                        </a>
+                                        <a href="#">
+                                            <span></span>
+                                            <img src="img/ban3-3.jpg" alt="">
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <span></span>
+                                            <img src="img/ban3-4.jpg" alt="">
+                                        </a>
+                                        <a href="#">
+                                            <span></span>
+                                            <img src="img/ban3-5.jpg" alt="">
+                                        </a>
+                                        <a href="#">
+                                            <span></span>
+                                            <img src="img/ban3-6.jpg" alt="">
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <span></span>
+                                            <img src="img/ban3-7.jpg" alt="">
+                                        </a>
+                                        <a href="#">
+                                            <span></span>
+                                            <img src="img/ban3-8.jpg" alt="">
+                                        </a>
+                                        <a href="#">
+                                            <span></span>
+                                            <img src="img/ban3-9.jpg" alt="">
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <span></span>
+                                            <img src="img/ban3-7.jpg" alt="">
+                                        </a>
+                                        <a href="#">
+                                            <span></span>
+                                            <img src="img/ban3-8.jpg" alt="">
+                                        </a>
+                                        <a href="#">
+                                            <span></span>
+                                            <img src="img/ban3-9.jpg" alt="">
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <span></span>
+                                            <img src="img/ban3-7.jpg" alt="">
+                                        </a>
+                                        <a href="#">
+                                            <span></span>
+                                            <img src="img/ban3-8.jpg" alt="">
+                                        </a>
+                                        <a href="#">
+                                            <span></span>
+                                            <img src="img/ban3-9.jpg" alt="">
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <span></span>
+                                            <img src="img/ban3-7.jpg" alt="">
+                                        </a>
+                                        <a href="#">
+                                            <span></span>
+                                            <img src="img/ban3-8.jpg" alt="">
+                                        </a>
+                                        <a href="#">
+                                            <span></span>
+                                            <img src="img/ban3-9.jpg" alt="">
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <span></span>
+                                            <img src="img/ban3-7.jpg" alt="">
+                                        </a>
+                                        <a href="#">
+                                            <span></span>
+                                            <img src="img/ban3-8.jpg" alt="">
+                                        </a>
+                                        <a href="#">
+                                            <span></span>
+                                            <img src="img/ban3-9.jpg" alt="">
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <span></span>
+                                            <img src="img/ban3-7.jpg" alt="">
+                                        </a>
+                                        <a href="#">
+                                            <span></span>
+                                            <img src="img/ban3-8.jpg" alt="">
+                                        </a>
+                                        <a href="#">
+                                            <span></span>
+                                            <img src="img/ban3-9.jpg" alt="">
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            <span></span>
+                                            <img src="img/ban3-7.jpg" alt="">
+                                        </a>
+                                        <a href="#">
+                                            <span></span>
+                                            <img src="img/ban3-8.jpg" alt="">
+                                        </a>
+                                        <a href="#">
+                                            <span></span>
+                                            <img src="img/ban3-9.jpg" alt="">
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="ban3_left"><</div>
+                            <div class="ban3_right">></div>
+                        </div>
+                    </div>
+                    <div class="ban2right4">
+                        <a href="#">
+                            <span></span>
+                            <p>TV直播表</p>
+                        </a>
+                        <a href="#">
+                            <span></span>
+                            <p>今日推荐</p>
+                        </a>
+                        <a href="#">
+                            <span></span>
+                            <p>热销榜单</p>
+                        </a>
+                    </div>
+                </div>
             </div>
             <div class="index-box2 center">
                 <h3>
@@ -2879,16 +3188,20 @@
                 </ul>
             </div>
         </div>
-        <div class="end" style="height:500px;">
-            
+        <div class="end" style="height:500px;">   
         </div>
+        <div class="bdleft"></div>
         <script src="js/jquery-1.11.3.js"></script>
         <script src="js/index.js"></script>
         <script src="js/jquery.cookie.js"></script>
         <script src="js/banner.js"></script>
         <script src="js/search.js"></script>
+        <script src="js/border-left.js"></script>
         <script> 
                 $('.end').load('bottom.html')
+        </script>
+        <script> 
+                $('.bdleft').load('left.html')
         </script>
     </body>
 </html>
