搭建商品详情页面

--- a/index.html
+++ b/index.html
@@ -478,21 +478,21 @@
                                     </li>
                                 </ul>
                             </div>
-                            <div class="ban3_left"><</div>
-                            <div class="ban3_right">></div>
+                            <div class="ban3_left">&lt;</div>
+                            <div class="ban3_right">&gt;</div>
                         </div>
                     </div>
                     <div class="ban2right4">
                         <a href="#">
-                            <span></span>
+                            <span class="iconfont">&#xe61b;</span>
                             <p>TV直播表</p>
                         </a>
                         <a href="#">
-                            <span></span>
+                            <span class="iconfont">&#xe663;</span>
                             <p>今日推荐</p>
                         </a>
                         <a href="#">
-                            <span></span>
+                            <span class="iconfont">&#xe6d1;</span>
                             <p>热销榜单</p>
                         </a>
                     </div>
@@ -3199,9 +3199,6 @@
         <script src="js/border-left.js"></script>
         <script> 
                 $('.end').load('bottom.html')
-        </script>
-        <script> 
-                $('.bdleft').load('left.html')
         </script>
     </body>
 </html>
